--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "browser-sync": "^2.26.14",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0"
   }
 }
