--- a/package.json
+++ b/package.json
@@ -18,13 +18,19 @@
   "homepage": "https://github.com/kmv-dev/gulp-start#readme",
   "devDependencies": {
     "browser-sync": "^2.26.14",
+    "browsersync-ssi": "^0.2.4",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-concat": "^2.6.1",
+    "gulp-file-include": "^2.3.0",
     "gulp-imagemin": "^7.1.0",
+    "gulp-include": "^2.4.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
-    "gulp-uglify-es": "^2.0.0"
+    "gulp-uglify-es": "^2.0.0",
+    "jquery": "^3.6.0",
+    "type": "module",
+    "webpack-stream": "^6.1.2"
   }
 }
